--- a/app/src/main/res/layout/row_stat_day.xml
+++ b/app/src/main/res/layout/row_stat_day.xml
@@ -1,44 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="10dp">
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/employeeImageView"
+        android:id="@+id/empImageView"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:src="@drawable/person_white"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
+        app:layout_constraintLeft_toLeftOf="parent" />
+
     <TextView
         android:layout_marginLeft="15dp"
-        android:id="@+id/txtEmployeeName"
+        android:id="@+id/txtEmpName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Employee name"
         android:textColor="@color/black"
         android:textStyle="bold"
-        android:textSize= "18dp"
-        app:layout_constraintLeft_toRightOf="@id/employeeImageView"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        android:textSize= "18sp"
+        app:layout_constraintLeft_toRightOf="@id/empImageView"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtLabelStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="Status: "
+        android:layout_marginStart="15dp"
+        app:layout_constraintLeft_toRightOf="@id/empImageView"
+        app:layout_constraintTop_toBottomOf="@id/txtEmpName" />
+
     <TextView
         android:id="@+id/txtStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Status: "
-        android:layout_marginLeft="15dp"
-        app:layout_constraintLeft_toRightOf="@id/employeeImageView"
-        app:layout_constraintTop_toBottomOf="@id/txtEmployeeName"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Absent with permission/Checkedin"
-        app:layout_constraintLeft_toRightOf="@id/txtStatus"
-        app:layout_constraintTop_toBottomOf="@id/txtEmployeeName"
-        />
+        android:text="Absent with permission/Checkin"
+        android:layout_marginStart="5dp"
+        app:layout_constraintLeft_toRightOf="@id/txtLabelStatus"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/txtEmpName" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
