--- a/app/src/main/res/layout/row_stat_day.xml
+++ b/app/src/main/res/layout/row_stat_day.xml
@@ -13,7 +13,7 @@
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
-        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
         android:id="@+id/txtEmpName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
