--- a/app/src/main/res/layout/fragment_manage__emp_.xml
+++ b/app/src/main/res/layout/fragment_manage__emp_.xml
@@ -43,6 +43,18 @@
             android:paddingTop="10sp"
             android:layout_marginStart="15sp"/>
 
+        <TextView
+            android:id="@+id/textviewNoti"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/tvEmpList"
+            android:text="No Employee"
+            android:gravity="center"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:visibility="invisible" />
+
         <ListView
             android:id="@+id/listviewEmp"
             android:layout_width="match_parent"
@@ -57,7 +69,8 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="20dp"
-            android:layout_marginEnd="10dp"/>
+            android:layout_marginEnd="10dp"
+            android:contentDescription="TODO" />
 
     </RelativeLayout>
 
