--- a/app/src/main/res/layout/emp_row.xml
+++ b/app/src/main/res/layout/emp_row.xml
@@ -18,6 +18,19 @@
         app:layout_constraintRight_toLeftOf="@+id/empName" />
 
     <TextView
+        android:id="@+id/empCode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#FF3131"
+        android:text="ATD125372"
+        android:textSize="18sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/empAvatar"
+        app:layout_constraintBottom_toTopOf="@+id/empName"
+        android:layout_marginStart="20sp"
+        android:layout_marginEnd="10sp"/>
+
+    <TextView
         android:id="@+id/empName"
         android:layout_width="250sp"
         android:layout_height="wrap_content"
@@ -26,7 +39,7 @@
         android:lines="1"
         android:textColor="@color/black"
         android:textSize="25sp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/empCode"
         app:layout_constraintLeft_toRightOf="@+id/empAvatar"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="20sp"
