--- a/app/src/main/res/layout/fragment_monthly_emp_report.xml
+++ b/app/src/main/res/layout/fragment_monthly_emp_report.xml
@@ -71,6 +71,19 @@
             android:dividerHeight="10sp"
             android:divider="#F8F8F8"/>
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btnExportPDF"
+            android:backgroundTint="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="625dp"
+            android:layout_marginEnd="47dp"
+            android:layout_marginBottom="30dp"
+            android:contentDescription="TODO"
+            app:srcCompat="@drawable/export_pdf" />
+
     </RelativeLayout>
 
 </FrameLayout>
