--- a/app/src/main/res/layout/layout_date_info_dialog.xml
+++ b/app/src/main/res/layout/layout_date_info_dialog.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_margin="20dp"
+    android:padding="20dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/layoutDialogContainer"
-    android:background="@drawable/dialog_background">
+    android:id="@+id/layoutDialogContainer">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
