--- a/app/src/main/res/layout/layout_date_info_dialog.xml
+++ b/app/src/main/res/layout/layout_date_info_dialog.xml
@@ -22,7 +22,7 @@
             android:text="Ngay bao nhieu"
             android:textAlignment="center"
             android:background="@drawable/date_information_background"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/white"
             android:textSize="17sp"
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -125,7 +125,7 @@
         app:layout_constraintBottom_toBottomOf="@id/layoutDialog"
         app:layout_constraintTop_toBottomOf="@id/layoutDialog"
         android:textSize="14sp"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/white"
         app:cornerRadius="20sp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
