--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,9 @@
     <style name="AlertDialogTheme" parent ="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
     </style>
+
+    <style name="SearchViewStyle" parent="Theme.AppCompat.Light">
+        <item name="android:editTextColor">@color/white</item>
+        <item name="android:textColorHint">#f2f2f2</item>
+    </style>
 </resources>
