--- a/app/src/main/res/layout/fragment_monthly_emp_report.xml
+++ b/app/src/main/res/layout/fragment_monthly_emp_report.xml
@@ -24,14 +24,28 @@
                 android:layout_height="match_parent"
                 android:src="@drawable/baseline_arrow_back_white_24"/>
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/labelMonthly"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Monthly Employee Report"
                 android:gravity="center_vertical"
                 android:textStyle="bold"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="5dp"
                 android:textColor="@color/white"
                 android:textSize="25sp"/>
+
+            <SearchView
+                android:id="@+id/searchMonthEmpReport"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:iconifiedByDefault="false"
+                android:theme="@style/SearchViewStyle"
+                android:contextClickable="true"
+                android:queryHint="Type here for search"
+                android:closeIcon="@drawable/ic_close"
+                android:searchHintIcon="@drawable/ic_search"
+                android:layout_marginStart="5dp"
+                android:searchIcon="@drawable/ic_search"/>
         </LinearLayout>
 
         <TextView
