--- a/app/src/main/res/layout/fragment_today_statistic.xml
+++ b/app/src/main/res/layout/fragment_today_statistic.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -16,21 +16,30 @@
             android:id="@+id/btnBackTodayStatistic"
             android:layout_width="40dp"
             android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
             android:src="@drawable/baseline_arrow_back_white_24"/>
-
         <TextView
-            android:layout_width="0dp"
+            android:id="@+id/layoutToday"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignParentEnd="true"
             android:layout_marginStart="30dp"
             android:gravity="center_vertical"
-            android:layout_toEndOf="@+id/btnBackTodayStatistic"
             android:text="Today Statistic"
             android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold" />
-    </RelativeLayout>
+        <SearchView
+            android:id="@+id/searchTodayReport"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:iconifiedByDefault="false"
+            android:theme="@style/SearchViewStyle"
+            android:contextClickable="true"
+            android:queryHint="Type here for search"
+            android:closeIcon="@drawable/ic_close"
+            android:searchHintIcon="@drawable/ic_search"
+            android:layout_marginStart="100dp"
+            android:searchIcon="@drawable/ic_search"/>
+    </LinearLayout>
     <TextView
         android:id="@+id/txtDay"
         android:layout_width="wrap_content"
