--- a/app/src/main/res/layout/fragment_admin_settings.xml
+++ b/app/src/main/res/layout/fragment_admin_settings.xml
@@ -83,6 +83,23 @@
             android:background="#AEAEAE"/>
 
         <TextView
+            android:id="@+id/txtAdminQRCode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Your QR Code"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:background="@drawable/border_line"
+            android:drawablePadding="24dp"
+            app:drawableStartCompat="@drawable/ic_qr_code" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#AEAEAE"/>
+
+        <TextView
             android:id="@+id/txtAdminChangePassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
