--- a/app/src/main/res/layout/fragment_q_r_code.xml
+++ b/app/src/main/res/layout/fragment_q_r_code.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:id="@+id/layout2"
@@ -11,10 +10,9 @@
         android:layout_height="60dp"
         android:background="#2196F3"
         android:padding="6dp"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
         <ImageView
-            android:id="@+id/btnBackResignation"
+            android:id="@+id/btnBackQRCode"
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:src="@drawable/baseline_arrow_back_white_24"
@@ -37,28 +35,13 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/layout2"
-        android:layout_marginTop="50dp"
-        >
+        android:layout_marginTop="50dp">
 
-        <TextView
-            android:id="@+id/idTVGenerateQR"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:elevation="1dp"
-            android:padding="4dp"
-            android:text="Mã QR sẽ xuất hiện tại đây"
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            />
         <ImageView
             android:id="@+id/idIVQRCode"
             android:layout_width="250dp"
             android:layout_height="250dp"
-            android:background="@color/white"
-            />
+            android:background="@color/white" />
     </FrameLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cLQRCode"
@@ -69,15 +52,15 @@
             android:id="@+id/btn_recreate_QR"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="15dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="20dp"
             android:backgroundTint="#2196F3"
             android:drawableLeft="@drawable/ic_baseline_autorenew_24"
-            android:text="Tạo lại QR"
-
-            />
+            android:text="REGENERATE QR"
+            android:textSize="18dp" />
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_save_QR"
             android:layout_width="wrap_content"
@@ -87,11 +70,12 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="20dp"
             android:drawableLeft="@drawable/ic_baseline_archive_24"
-            android:text="Lưu"
+            android:text="SAVE"
             android:textSize="15dp"
             android:textAllCaps="false"
             android:backgroundTint="#2196F3"
-            />
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
