--- a/app/src/main/res/layout/activity_qrscanner.xml
+++ b/app/src/main/res/layout/activity_qrscanner.xml
@@ -1,66 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
-    tools:context=".QRScannerActivity"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <com.budiyev.android.codescanner.CodeScannerView
+        android:id="@+id/scannerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/btnQuit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
-            android:src="@drawable/ic_cancel"/>
+        android:layout_height="match_parent"
+        app:autoFocusButtonVisible="false"
+        app:frameColor="#2196F3"
+        app:frameCornersRadius="20dp" />
 
-        <ImageView
-            android:id="@+id/btnFlash"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_flash_off"/>
-    </RelativeLayout>
-
+    <ImageView
+        android:id="@+id/btnQuit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:src="@drawable/ic_cancel"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Move camera to scan QR Code"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="80dp"
         android:textSize="20sp"
         android:textColor="@color/white"
-        android:layout_gravity="center_horizontal"/>
-
-    <androidx.camera.view.PreviewView
-        android:id="@+id/cameraPreview"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_marginTop="80dp"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_marginBottom="19dp"
+        android:layout_centerHorizontal="true"/>
 
     <ImageView
         android:id="@+id/btnOpenGallery"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/ic_gallery"
-        android:layout_marginTop="100dp"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_above="@+id/labelPickImage"
+        android:layout_marginBottom="20dp"
+        android:layout_centerHorizontal="true"/>
 
     <TextView
+        android:id="@+id/labelPickImage"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="Pick QR from gallery"
         android:textAlignment="center"
-        android:layout_marginTop="20dp"
         android:textSize="18sp"
+        android:layout_marginBottom="100dp"
         android:textColor="@color/white"
-        android:layout_gravity="center_horizontal"/>
-</androidx.appcompat.widget.LinearLayoutCompat>
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
+
+</RelativeLayout>
