--- a/app/src/main/res/layout/fragment_add_employee.xml
+++ b/app/src/main/res/layout/fragment_add_employee.xml
@@ -155,31 +155,38 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/edtPassword1"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txtPassword1"
+        android:layout_height="55dp"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/black"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/edt_background"
-        android:drawableLeft="@drawable/lock_white"
-        android:drawablePadding="15sp"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:padding="15dp"
-        android:textColorHint="#AA4B5151"
-        android:textStyle="bold" />
-
-
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/txtPassword1">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edtPassword1"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:inputType="textPassword"
+            android:paddingStart="10dp"
+            android:hint="Password"
+            android:text="Kltn2023*"
+            android:focusable="false"
+            android:paddingEnd="10dp"
+            android:drawableStart="@drawable/lock_white"
+            android:drawablePadding="10dp"
+            android:background="@drawable/edt_background"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnAdd"
         android:layout_width="350sp"
         android:layout_height="75sp"
-        android:layout_below="@+id/edtPassword1"
+        android:layout_below="@+id/textInputLayout"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10sp"
         android:backgroundTint="#2196F3"
