change status attendance

--- a/app/src/main/res/layout/fragment_edit_emp.xml
+++ b/app/src/main/res/layout/fragment_edit_emp.xml
@@ -11,9 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-medium"
         android:paddingTop="15sp"
-        android:text="EMPLOYEE'S NAME"
+        android:text="EMPLOYEE'S CODE"
         android:textColor="#2196F3"
         android:textSize="25sp"
         android:textStyle="bold" />
@@ -53,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/edtPhonenum"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/edt_background"
@@ -72,7 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/edtName"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/edt_background"
