--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -96,6 +96,23 @@
             android:background="#AEAEAE"/>
 
         <TextView
+            android:id="@+id/txtFeedback"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Feedback"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:background="@drawable/border_line"
+            android:drawablePadding="24dp"
+            app:drawableStartCompat="@drawable/ic_feedback" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#AEAEAE"/>
+
+        <TextView
             android:id="@+id/txtLogOut"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
