--- a/app/src/main/res/layout/row_stat_day.xml
+++ b/app/src/main/res/layout/row_stat_day.xml
@@ -14,6 +14,30 @@
 
     <TextView
         android:layout_marginStart="15dp"
+        android:id="@+id/txtEmpCode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Code"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize= "18sp"
+        app:layout_constraintLeft_toRightOf="@id/empImageView"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_marginStart="15dp"
+        android:id="@+id/txtspace"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="-"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize= "18sp"
+        app:layout_constraintLeft_toRightOf="@id/txtEmpCode"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_marginStart="15dp"
         android:id="@+id/txtEmpName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,7 +45,7 @@
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize= "18sp"
-        app:layout_constraintLeft_toRightOf="@id/empImageView"
+        app:layout_constraintLeft_toRightOf="@id/txtspace"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -44,5 +68,12 @@
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/txtEmpName" />
 
-
+    <ImageView
+        android:id="@+id/btnEditRecord"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/ic_edit_record"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
