--- a/app/src/main/res/layout/fragment_admin_settings.xml
+++ b/app/src/main/res/layout/fragment_admin_settings.xml
@@ -71,9 +71,10 @@
                 android:background="@drawable/noti_rounded"
                 android:visibility="invisible"
                 android:text="1"
+                android:textStyle="bold"
                 android:layout_alignParentEnd="true"
                 android:textColor="@color/white"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
 
         </RelativeLayout>
 
@@ -93,6 +94,44 @@
             android:background="@drawable/border_line"
             android:drawablePadding="24dp"
             app:drawableStartCompat="@drawable/ic_qr_code" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#AEAEAE"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/txtListFeedback"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="List Staff Feedback"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:background="@drawable/border_line"
+                android:drawablePadding="24dp"
+                app:drawableStartCompat="@drawable/ic_baseline_access_time_filled_24" />
+
+            <TextView
+                android:id="@+id/txtAmountFeedback"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="10dp"
+                android:gravity="center"
+                android:background="@drawable/noti_rounded"
+                android:visibility="invisible"
+                android:text="1"
+                android:textStyle="bold"
+                android:layout_alignParentEnd="true"
+                android:textColor="@color/white"
+                android:textSize="18sp"/>
+
+        </RelativeLayout>
 
         <TextView
             android:layout_width="match_parent"
