--- a/app/src/main/res/layout/fragment_today_statistic.xml
+++ b/app/src/main/res/layout/fragment_today_statistic.xml
@@ -136,4 +136,17 @@
         android:layout_height="match_parent"
         android:layout_below="@id/txtNumAbsent"
         android:layout_marginTop="5dp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnTodayExportPDF"
+        android:backgroundTint="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="625dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginBottom="30dp"
+        android:contentDescription="TODO"
+        app:srcCompat="@drawable/export_pdf" />
 </RelativeLayout>
